added win condition to changelog

--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@ Select all that apply to your site:
 &lt;&lt;set $users to 5&gt;&gt;
 &lt;&lt;set $funds to 200&gt;&gt;
 
-&lt;&lt;set $changelog to [&quot;Started the site with a little spending money and got some friends to join.&quot;]&gt;&gt;
+&lt;&lt;set $changelog to [&quot;Started the site with a little spending money and got some friends to join. I\&#39;m trying to get to 5,000 users or $50,000, then I\&#39;ll know I made it!&quot;]&gt;&gt;
 
 
 &lt;&lt;set $totalProfileIcons to 39&gt;&gt;
@@ -1695,7 +1695,11 @@ Dislike ($selectedTopics_content[_i][4])
 
 
 &lt;&lt;timed 0s&gt;&gt;&lt;&lt;goto &quot;setup scenario&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-&lt;&lt;/silent&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="TO DO" tags="" position="1050,225" size="100,100">   DONE
+&lt;&lt;/silent&gt;&gt;</tw-passagedata><tw-passagedata pid="16" name="TO DO" tags="" position="1050,225" size="100,100">- Optionally show &quot;all choices&quot; for every turn (and turn off ones that you can&#39;t use for a few turns)
+- Show stat changes in changlog?
+- Show what will happen on the options you pick before you pick it
+
+DONE
     - Reels won&#39;t show even when ypu pick the Reels thing. 
     - Some kind of error shows when you select an item (on the &quot;resolve scenario&quot; node: &quot;&lt;&lt;/case&gt;&gt;&quot; is not recognized)
     - Randomly assign usernames
